# motive

./: .build_manifest.json  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  AUTH.md  CAMERA_ARCHITECTURE_IMPROVEMENTS.md  CMakeLists.txt  DATAFLOW.md  MOTION_AND_TRACKING_DATAFLOW.md  PARALLEL_LOADING.md  README.md  README_BRAIN_VIEWER.md  REFACTOR_PLAN.md  UI_HIERARCHY.md  UX.md  animation.cpp  animation.h  asset_browser_widget.cpp  asset_browser_widget.h  asset_load_profile.cpp  asset_loader.cpp  asset_loader.h  brain_viewer.py  brain_viewer_engine.cpp  brain_viewer_engine.h  buffer_manager.cpp  buffer_manager.h  build.py  build.sh  build_deps.py  build_windows.ps1  build_windows.sh  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  camera_follow_settings.h  camera_mode.h  camera_mode_rules.h  (+219 more)
engine_ui_shared/: README.md
engine_ui_shared/docs/: ARCHITECTURE.md
motive/: .gitignore  build.py  camera.cpp  camera.h  display.cpp  display.h  display2d.cpp  engine.cpp  engine.h  error.txt  fonts.cpp  glyph.cpp  glyph.h  graphicsdevice.cpp  graphicsdevice.h  light.cpp  light.h  main  main.cpp  model.cpp  model.h  motive2d.cpp  object_transform.h  texture.cpp  texture.h  video.cpp  video.h  video_frame_utils.cpp
motive/shaders/: mainforward.frag  mainforward.frag.spv  mainforward.vert  mainforward.vert.spv  video_blit.comp  video_blit.comp.spv
shaders/: mainforward.frag  mainforward.frag.spv  mainforward.vert  mainforward.vert.spv  mainforward_gizmo.frag  mainforward_gizmo.frag.spv  mainforward_skinned.vert  mainforward_skinned.vert.spv  overlay_rect.comp  overlay_rect.comp.spv  video_blit.comp  video_blit.comp.spv
tests/: CMakeLists.txt  simple_test.cpp
tests/integration/: test_oblique_text_png.py  test_rest_animation_physics.py  test_runtime_ux.py  test_text_extrusion_png.py
tests/unit/: test_camera_follow_settings.cpp  test_camera_mode_rules.cpp  test_control_server.cpp  test_follow_target_tracker.cpp  test_input_mode_rules.cpp  test_inspector_ui.cpp  test_main.cpp  test_orbit_follow_rig.cpp  test_simple.cpp
